# Wind-Up

./: CMakeLists.txt  README.md  entry.cpp
apps/demo/assets/shaders/: mesh.frag.hlsl  mesh.frag.spv  mesh.vert.hlsl  mesh.vert.spv
apps/demo/configs/: game_gui_style.yaml
apps/demo/levels/: room.yaml
apps/demo/scripts/: compile_shaders.bat
apps/demo/src/: demo.cpp  demo.hpp
src/: windup.cpp  windup.hpp
src/assets/shaders/: editor_ui.frag.spv  editor_ui.vert.spv
src/commands/: commands.cpp  commands.hpp
src/common/: alias.hpp  app.hpp  app_entry.hpp  cache.hpp  color_schemes.hpp  components.hpp  configs.hpp  context.hpp  device.hpp  entity.hpp  gui.hpp  handles.hpp  level.hpp  material.hpp  math.hpp  mesh.hpp  model.hpp  module.hpp  modules.hpp  mvp.hpp  pipeline.hpp  render_data.hpp  shader.hpp  status.hpp  texture.hpp  thread.hpp  vertex.hpp  window.hpp
src/configs/: editor_gui_style.yaml
src/logger/: logger.cpp  logger.hpp
src/modules/devices/: devices.cpp  devices.hpp
src/modules/ecs/: ecs.cpp  ecs.hpp
src/modules/levels/: levels.cpp  levels.hpp
src/modules/profiler/: profiler.cpp  profiler.hpp
src/modules/renderer/: renderer.cpp  renderer.hpp
src/modules/resources/: resources.cpp  resources.hpp
src/modules/threading/: threading.cpp  threading.hpp
src/modules/time/: time.cpp  time.hpp
src/modules/user_io/: user_io.cpp  user_io.hpp
src/modules/windowing/: windowing.cpp  windowing.hpp
